--- a/.htaccess
+++ b/.htaccess
@@ -2,11 +2,14 @@ RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
-# Rewrite Height
-RewriteRule ^([0-9]+)\/?$ b.php?height=$1 [L]
+# Rewrite column and gutter width
+RewriteRule ^([0-9]+)\/([0-9]+)\/?$ b.php?columnWidth=$1&gutterWidth=$2 [L]
+
+# Rewrite with column number
+RewriteRule ^([0-9]+)\/([0-9]+)\/([0-9]+)\/?$ b.php?columnWidth=$1&gutterWidth=$2&columnNum=$3 [L]
 
 # Rewrite for Hex Code [6 character only]
-RewriteRule ^([0-9]+)\/([0-9a-zA-Z]{6})\/?$ b.php?height=$1&hex=$2 [L]
+RewriteRule ^([0-9]+)\/([0-9]+)\/([0-9]+)\/([0-9a-fA-F]{6})\/?$ b.php?columnWidth=$1&gutterWidth=$2&columnNum=$3&hex=$4 [L]
 
 # Rewrite for RGB Code
 RewriteRule ^([0-9]+)\/([0-9]{1,3})\/([0-9]{1,3})\/([0-9]{1,3})\/?$ b.php?height=$1&r=$2&g=$3&b=$4 [L]
